--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,10 +11,14 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Soltd11"
         tools:targetApi="31">
+        <activity
+            android:name=".MusicPlayerActivity"
+            android:exported="false" />
+
         <service
             android:name=".Ex1Service"
             android:enabled="true"
-            android:exported="true"></service>
+            android:exported="true" />
 
         <activity
             android:name=".MainActivity"
